Jumplist: Ensure jumplist displays on top of carousel arrows

--- a/src/blocks/table-of-contents/_jumplist.scss
+++ b/src/blocks/table-of-contents/_jumplist.scss
@@ -152,7 +152,7 @@ $indicator-cutoff-width: 980px;
 		position: absolute;
 		top: 108px;
 		width: 100%;
-		z-index: 10;
+		z-index: 11;
 
 		&--pinned {
 			position: fixed;
